unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/pse__VersionItem_ResourceRequest__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__VersionHelp</customHelpPage>
    <description>A capture of a resource request taken at the time the version is created.</description>
    <label>Version Item Resource Request</label>
    <nameField>
        <displayFormat>PVRR-{0000}</displayFormat>
        <label>Version Item Resource Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Version Item Resource Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>