unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__Account__c.field-meta.xml
<CustomField>
    <fullName>pse__Account__c</fullName>
    <inlineHelpText>The account name for the resource request referenced in the version.</inlineHelpText>
    <label>Account</label>
    <length>200</length>
    <type>Text</type>
</CustomField>