unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__AssignmentId__c.field-meta.xml
<CustomField>
    <fullName>pse__AssignmentId__c</fullName>
    <inlineHelpText>The assignment ID for the resource request referenced in the version.</inlineHelpText>
    <label>Assignment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>