unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__AssignmentName__c.field-meta.xml
<CustomField>
    <fullName>pse__AssignmentName__c</fullName>
    <inlineHelpText>The assignment name for the resource request referenced in the version.</inlineHelpText>
    <label>Assignment Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>