unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__MilestoneId__c.field-meta.xml
<CustomField>
    <fullName>pse__MilestoneId__c</fullName>
    <inlineHelpText>The milestone ID for the resource request referenced in the version.</inlineHelpText>
    <label>Milestone Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>