unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__MilestoneName__c.field-meta.xml
<CustomField>
    <fullName>pse__MilestoneName__c</fullName>
    <inlineHelpText>The milestone name for the resource request referenced in the version.</inlineHelpText>
    <label>Milestone Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>