unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__OriginalCreatedById__c.field-meta.xml
<CustomField>
    <fullName>pse__OriginalCreatedById__c</fullName>
    <inlineHelpText>The created by user ID for the resource request referenced in the version.</inlineHelpText>
    <label>Original Created By Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>