unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__OriginalId__c.field-meta.xml
<CustomField>
    <fullName>pse__OriginalId__c</fullName>
    <description>The original ID of the resource request referenced in the version.</description>
    <inlineHelpText>The original ID of the resource request referenced in the version.</inlineHelpText>
    <label>Original Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>