unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__OriginalOwnerName__c.field-meta.xml
<CustomField>
    <fullName>pse__OriginalOwnerName__c</fullName>
    <inlineHelpText>The owner name for the resource request referenced in the version.</inlineHelpText>
    <label>Original Owner Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>