unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__Percent_Allocated__c.field-meta.xml
<CustomField>
    <fullName>pse__Percent_Allocated__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The percent allocated for the resource request referenced in the version.</description>
    <inlineHelpText>The percent allocated for the resource request referenced in the version.</inlineHelpText>
    <label>Percent Allocated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>