unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__Request_Priority__c.field-meta.xml
<CustomField>
    <fullName>pse__Request_Priority__c</fullName>
    <description>The request priority for the resource request referenced in the version.</description>
    <inlineHelpText>The request priority for the resource request referenced in the version.</inlineHelpText>
    <label>Request Priority</label>
    <length>200</length>
    <type>Text</type>
</CustomField>