unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__Resource_Held__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The resource held for the resource request referenced in the version.</inlineHelpText>
    <label>Resource Held</label>
    <type>Checkbox</type>
</CustomField>