unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Role__c</fullName>
    <description>The resource role for the resource request referenced in the version.</description>
    <inlineHelpText>The resource role for the resource request referenced in the version.</inlineHelpText>
    <label>Resource Role</label>
    <length>200</length>
    <type>Text</type>
</CustomField>