unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__ResourceId__c.field-meta.xml
<CustomField>
    <fullName>pse__ResourceId__c</fullName>
    <description>The suggested resource ID on the resource request referenced in the version.</description>
    <inlineHelpText>The suggested resource ID on the resource request referenced in the version.</inlineHelpText>
    <label>Suggested Resource Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>