unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__ResourceName__c.field-meta.xml
<CustomField>
    <fullName>pse__ResourceName__c</fullName>
    <description>The suggested resource name on the resource request referenced in the version.</description>
    <inlineHelpText>The suggested resource name on the resource request referenced in the version.</inlineHelpText>
    <label>Suggested Resource Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>