unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__ResourceRequestId__c.field-meta.xml
<CustomField>
    <fullName>pse__ResourceRequestId__c</fullName>
    <description>The resource request name for the resource request referenced in the version.</description>
    <inlineHelpText>The system-generated resource request name for the resource request referenced in the version.</inlineHelpText>
    <label>Resource Request Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>