unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__SOW_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__SOW_Hours__c</fullName>
    <description>The requested hours for the resource request referenced in the version.</description>
    <inlineHelpText>The requested hours for the resource request referenced in the version.</inlineHelpText>
    <label>Requested Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>