unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__Staffer_ResourceId__c.field-meta.xml
<CustomField>
    <fullName>pse__Staffer_ResourceId__c</fullName>
    <description>The resource ID on the resource request referenced in the version.</description>
    <inlineHelpText>The resource ID on the resource request referenced in the version.</inlineHelpText>
    <label>Resource Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>