unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__Staffer_ResourceName__c.field-meta.xml
<CustomField>
    <fullName>pse__Staffer_ResourceName__c</fullName>
    <description>The resource name on the resource request referenced in the version.</description>
    <inlineHelpText>The resource name on the resource request referenced in the version.</inlineHelpText>
    <label>Resource Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>