unpackaged/main/default/objects/pse__VersionItem_ResourceRequest__c/fields/pse__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Date__c</fullName>
    <description>The start date for the resource request referenced in the version.</description>
    <inlineHelpText>The start date for the resource request referenced in the version.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>